8033106: Wrong predicate for checking whether the correct amount of symbol table entries have been processed in G1

The change fixes the predicate check.

Reviewed-by: jmasa, tonyp, stefank